--- a/FileShare/Views/Auth/Login.cshtml
+++ b/FileShare/Views/Auth/Login.cshtml
@@ -9,54 +9,89 @@
 @{
     ViewData["Title"] = "Login";
 }
-<div class="limiter">
-    <div class="container-login100">
-        <div class="wrap-login100">
-            <div class="login100-form-title" style="background-image: url(~/images/bg-01.jpg);">
-                <span class="login100-form-title-1">
-                    Sign In
-                </span>
+<div class="container-fluid">
+    <div class="row">
+        <div  class="col">
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
             </div>
-
-            <form class="login100-form validate-form" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl">
-                <div asp-validation-summary="ModelOnly"
-                     class="validation-summary alert alert-danger alert-dismissable" style="width:100%">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">
-                            &times;
-                        </span>
-                    </button>
-                </div>
-                <div class="wrap-input100 validate-input m-b-26" data-validate="E-mail obrigatório">
-                    <span class="label-input100" asp-for="Username">E-Mail</span>
-                    <input class="input100" asp-for="Username" placeholder="E-Mail">
-                    <span class="focus-input100"></span>
-                </div>
-
-                <div class="wrap-input100 validate-input m-b-18" data-validate="Senha Obrigatório">
-                    <span class="label-input100" asp-for="Password">Senha</span>
-                    <input class="input100" asp-for="Password" placeholder="Senha">
-                    <span class="focus-input100"></span>
-                </div>
-
-                <div class="flex-sb-m w-full p-b-30">
-                    <div class="checkbox contact100-form-checkbox">
-                        <input asp-for="RememberMe" class="input-checkbox100" />
-                        <label asp-for="RememberMe" class="label-checkbox100"></label>
-                    </div>
-
-                    <div>
-                        <a href="#" class="txt1">
-                            Esqueceu a Senha?
-                        </a>
-                    </div>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <input class="login100-form-btn" type="submit" title="Entrar" value="Entrar" />
-                </div>
-            </form>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 80px;">
+        <div class="col">      
+              <div class="d-flex justify-content-center h-100">
+			    <div class="user_card" style="width: 400px;">
+				    <div class="d-flex justify-content-center">
+					    <div class="brand_logo_container">
+						    <img src="https://files.afonsoft.com.br/img/FileShareUpload512.png" class="brand_logo" alt="Logo">
+					    </div>
+				    </div>
+				    <div class="d-flex justify-content-center form_container">
+					    <form id="loginForm"  asp-action="Login" asp-route-returnurl="@Model.ReturnUrl" style="width: 90%;">
+						    
+                        @Html.AntiForgeryToken()
+                         <div asp-validation-summary="ModelOnly" class="validation-summary alert alert-danger alert-dismissable" style="width:100%">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">
+                                    &times;
+                                </span>
+                            </button>
+                        </div>
+                       	<div class="input-group mb-3">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
+							</div>
+							<input type="text"  asp-for="Username" class="form-control input_user" placeholder="username" style="font-size: 10pt;">
+						</div>
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							</div>
+							<input type="password" asp-for="Password" class="form-control input_pass" placeholder="password" style="font-size: 10pt;">
+						</div>
+						<div class="form-group">
+							<div class="custom-control custom-checkbox">
+								<input type="checkbox" class="custom-control-input" asp-for="RememberMe" id="customControlInline">
+								<label class="custom-control-label" for="customControlInline" asp-for="RememberMe"></label>
+							</div>
+						</div>
+						<div class="d-flex justify-content-center mt-3 login_container">
+                            <input class="btn login_btn" type="submit" title="Login" value="Login" />
+				        </div>
+                        </form>
+				    </div>
+			    </div>
+		    </div>
+        </div>
+        <div class="col-8">
+            <div align="center" class="center">
+                <!-- QuadradoResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="8909468727"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 30px;margin-bottom: 60px;">
+        <div  class="col">
+            <div align="center" class="center">
+                <!-- HorizontalResponsivo -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-2122647083447667"
+                     data-ad-slot="2536456475"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
         </div>
     </div>
 </div>
-
